# ragchat

./: .gitignore  README.md  TODO.md  config.yaml  pyproject.toml  requirements.txt  run.sh  test_gpu.sh  urls.txt  urls.txt.example
src/bot/: __main__.py  chat.py  chat_session.py  cuda_test.py  embeddings.py  ingest.py  install_steps.py  processor.py  query.py  scrape.py
src/bot.egg-info/: PKG-INFO  SOURCES.txt
